// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should have safe-area-inset-top class when using safe-area-inset-top prop  1`] = `
<div>
  <div
    class="rc-nav-bar rc-nav-bar--safe-area-inset-top rc-hairline--bottom"
    style="z-index: 1;"
  >
    <div
      class="rc-nav-bar__content"
    >
      
      <div
        class="rc-nav-bar__title van-ellipsis"
      >
        foo
      </div>
      
    </div>
  </div>
</div>
`;

exports[`NavBar should render ReactNode icon correct 1`] = `
<div>
  <div
    class="rc-nav-bar rc-hairline--bottom"
    style="z-index: 1;"
  >
    <div
      class="rc-nav-bar__content"
    >
      <div
        class="rc-nav-bar__left rc-haptics-feedback"
      >
        <span
          class="rc-nav-bar__text"
        >
          <i
            class="rc-badge__wrapper van-icon van-icon-cart-o"
            style="color: rgb(25, 137, 250);"
          />
        </span>
      </div>
      <div
        class="rc-nav-bar__title van-ellipsis"
      >
        foo
      </div>
      
    </div>
  </div>
</div>
`;

exports[`NavBar should render correct when set props fixed and placeholder 1`] = `
<div>
  <div
    class="rc-nav-bar__placeholder"
    style="height: 50px;"
  >
    <div
      class="rc-nav-bar rc-nav-bar--fixed rc-hairline--bottom"
      style="z-index: 1;"
    >
      <div
        class="rc-nav-bar__content"
      >
        
        <div
          class="rc-nav-bar__title van-ellipsis"
        >
          foo
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar should render left area correct 1`] = `
<div>
  <div
    class="rc-nav-bar rc-hairline--bottom"
    style="z-index: 1;"
  >
    <div
      class="rc-nav-bar__content"
    >
      <div
        class="rc-nav-bar__left rc-haptics-feedback"
      >
        <span
          class="rc-nav-bar__text"
        >
          speaker-s
        </span>
      </div>
      <div
        class="rc-nav-bar__title van-ellipsis"
      >
        foo
      </div>
      
    </div>
  </div>
</div>
`;

exports[`NavBar should render leftArrow correct 1`] = `
<div>
  <div
    class="rc-nav-bar rc-hairline--bottom"
    style="z-index: 1;"
  >
    <div
      class="rc-nav-bar__content"
    >
      <div
        class="rc-nav-bar__left rc-haptics-feedback"
      >
        <i
          class="rc-badge__wrapper rc-nav-bar__arrow van-icon van-icon-arrow-left"
        />
        
      </div>
      <div
        class="rc-nav-bar__title van-ellipsis"
      >
        foo
      </div>
      
    </div>
  </div>
</div>
`;

exports[`NavBar should render right area correct 1`] = `
<div>
  <div
    class="rc-nav-bar rc-hairline--bottom"
    style="z-index: 1;"
  >
    <div
      class="rc-nav-bar__content"
    >
      
      <div
        class="rc-nav-bar__title van-ellipsis"
      >
        foo
      </div>
      <div
        class="rc-nav-bar__right rc-haptics-feedback"
      >
        <span
          class="rc-nav-bar__text"
        >
          speaker-s
        </span>
      </div>
    </div>
  </div>
</div>
`;
